# effing-mad

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
effing-macros/: Cargo.toml
effing-macros/src/: lib.rs
examples/: async-and-sync.rs  basic.rs  effects-macro.rs  effects_macro.rs  effects_set.rs  higher-order.rs  iterator.rs  nondet.rs  sync-and-async.rs  transform.rs
src/: functor_eff.rs  higher_order.rs  injection.rs  lib.rs  macro_impl.rs
src/effects/: future.rs  mod.rs  nondet.rs
