[workspace]
members = ["effing-macros"]

[package]
name = "effing-mad"
version = "0.1.0"
description = "The hottest algebraic effects library in Rust."
edition = "2021"
authors = ["Rose Hudson <rose@krx.sh>"]
license = "MIT OR Apache-2.0"

[dependencies]
effing-macros = { path = "effing-macros" }
coproduct = { version = "0.4.1", features = ["type_inequality_hack"] }

# for sync-and-async example
futures = { version = "0.3.23", optional = true, default-features = false }
reqwest = { version = "0.11.11", optional = true, features = ["blocking"], default-features = false }
tokio = { version = "1.20.1", optional = true, features = ["rt"], default-features = false }

[features]
http = ["futures", "reqwest", "tokio"]
