[workspace]
members = ["effing-macros"]

[workspace.package]
repository = "https://github.com/rosefromthedead/effing-mad"

[package]
name = "effing-mad"
version = "0.1.0"
description = "The hottest algebraic effects library in Rust."
repository.workspace = true
edition = "2021"
authors = ["Rose Hudson <rose@krx.sh>"]
license = "MIT OR Apache-2.0"

[dependencies]
effing-macros = { path = "effing-macros" }
frunk = { version = "0.4.0", default-features = false }

[dev-dependencies]
# for sync-and-async example
futures = { version = "0.3.23", default-features = false }
reqwest = { version = "0.11.11", features = ["blocking"], default-features = false }
tokio = { version = "1.20.1", features = ["rt"], default-features = false }

[features]
alloc = []

[[example]]
name = "nondet"
required-features = ["alloc"]

[package.metadata.docs.rs]
features = ["alloc"]
