[package]
name = "effing-macros"
version = "0.1.0"
description = "Macros used with the hottest algebraic effects library in Rust."
repository.workspace = true
edition = "2021"
authors = ["Rose Hudson <rose@krx.sh>"]
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.42"
syn = { version = "1.0.98", features = ["extra-traits", "full", "visit-mut"] }
quote = "1.0.20"
